# fund_api_assessment

./: .gitignore  README.md  pyproject.toml  requirements.txt
funds_api/: __init__.py
funds_api/bp/: __init__.py  funds.py
funds_api/database/: __init__.py  base.py  exceptions.py  json_db.py  model.py
funds_api/scripts/: __init__.py  create_schema.py  data_migration.py
funds_api/services/: exceptions.py  services.py
tests/: api_test.py  services_test.py
